Fixed the layout problem at index.html

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 body{
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: #121212;
     font-family: Oswald, sans-serif;
 }
@@ -16,32 +16,32 @@ body{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 0.5vw;
+    gap: 0.5rem;
     height: 100vh;
 }
 .box1, .box2, .box3, .box4, .box5, .box31{
     background-color: aliceblue;
-    border-radius: 1vw;
+    border-radius: 1rem;
     position: relative;
     overflow: hidden;
 }
 .box1{
-    height: 30vh;
-    width: 20vw;
+    height: 30rem;
+    width: 20rem;
 }
 
     
 .col2{
     display: flex;
     flex-direction: column;
-    gap: 0.5vw;
+    gap: 0.5rem;
 }
 .box2 {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    height: 9.875vh;
-    font-size: 8vw;
+    height: 9.875rem;
+    font-size: 8rem;
     background: linear-gradient(to left, aliceblue 50%, black 50%);
     background-size: 200% 100%;
     background-position: right;
@@ -51,7 +51,7 @@ body{
 
 .box2 a {
     text-decoration: none;
-    color: #121212;
+    color: black;
 }
 
 
@@ -60,39 +60,39 @@ body{
     color: white;
 }
 .box6{
-    width: 14.75vw;
-    height: 18.25vh;
+    width: 14.75rem;
+    height: 18.25rem;
 }
 .c2r1{
     display: flex;
     flex-direction: row;
-    gap: 0.5vw;
+    gap: 0.5rem;
 }
 .c2r1c1{
     display: flex;
     flex-direction: column;
-    gap: 0.5vw;
+    gap: 0.5rem;
 }
 .box3{
-    width: 14.75vw;
-    height: 9.65vh;
+    width: 14.75rem;
+    height: 9.65rem;
 }
 .box31{
-    height: 19.75vh;
-    width: 14.75vw;
+    height: 19.75rem;
+    width: 14.75rem;
 }
 .col3{
     display: flex;
     flex-direction: column;
-    gap: 0.5vw;
+    gap: 0.5rem;
 }
 .box4{
-    width: 14.75vw;
-    height: 9.75vh;
+    width: 14.75rem;
+    height: 9.75rem;
     display: flex;
     justify-content: center; 
     align-items: center; 
-    font-size: 4vw;
+    font-size: 4rem;
     background: linear-gradient(to right, aliceblue 50%, black 50%);
     background-size: 200% 100%;
     background-position: left;
@@ -104,14 +104,14 @@ body{
     color: white;
 }
 .box5{
-    width: 14.75vw;
-    height: 19.75vh;
+    width: 14.75rem;
+    height: 19.75rem;
 }
 
 .img{
     width: 100%;
     height: 100%;
-    border-radius: 1vw;
+    border-radius: 1rem;
     transition: transform 0.5s ease-in-out;
 }
 
@@ -182,4 +182,21 @@ nav a:hover::before {
         display:block;
         font-size: 24px;
     }
+
+    nav a::before {
+        content: "";
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        width: 0;
+        height: 2px;
+        background-color: white;
+        transform-origin: left;
+        transition: width 0.3s ease-in-out;
+    }
+    
+    nav a:hover::before {
+        width: 100%;
+    }
+
 }
